src/shell/snapshots/rtx__shell__zsh__tests__deactivate.snap
---
source: src/shell/zsh.rs
expression: replace_path(&deactivate)
---
export PATH="foo";
unset _rtx_hook;

