src/shell/snapshots/rtx__shell__zsh__tests__hook_init.snap
---
source: src/shell/zsh.rs
expression: "zsh.activate(exe, \" --status\".into())"
---
export PATH="/some/dir:$PATH"
export RTX_SHELL=zsh
export __RTX_ORIG_PATH="$PATH"

rtx() {
  local command
  command="${1:-}"
  if [ "$#" = 0 ]; then
    command /some/dir/rtx
    return
  fi
  shift

  case "$command" in
  deactivate|s|shell)
    # if argv doesn't contains -h,--help
    if [[ ! " $@ " =~ " --help " ]] && [[ ! " $@ " =~ " -h " ]]; then
      eval "$(command /some/dir/rtx "$command" "$@")"
      return $?
    fi
    ;;
  esac
  command /some/dir/rtx "$command" "$@"
}

_rtx_hook() {
  eval "$(/some/dir/rtx hook-env --status -s zsh)";
}
typeset -ag precmd_functions;
if [[ -z "${precmd_functions[(r)_rtx_hook]+1}" ]]; then
  precmd_functions=( _rtx_hook ${precmd_functions[@]} )
fi
typeset -ag chpwd_functions;
if [[ -z "${chpwd_functions[(r)_rtx_hook]+1}" ]]; then
  chpwd_functions=( _rtx_hook ${chpwd_functions[@]} )
fi

functions[command_not_found_handler]='
  {
    if (( ! IN_CNFH++)) && /some/dir/rtx hook-not-found -s zsh "$1"; then
      _rtx_hook
      "$@"
    else
      print -ru2 -- "$functrace[1]: command not found: $1"
      return 127
    fi
  } always {
    (( IN_CNFH-- ))
  }
  '$functions[command_not_found_handler]

