src/shell/snapshots/rtx__shell__zsh__tests__set_env.snap
---
source: src/shell/zsh.rs
expression: "Zsh::default().set_env(\"FOO\", \"1\")"
---
export FOO=1

